# iroh-nix

./: .gitignore  Cargo.toml  README.md  flake.nix  module.nix
crates/nix-store/: Cargo.toml
crates/nix-store-cf/: Cargo.toml  wrangler.toml
crates/nix-store-cf/migrations/: 0001_init.sql
crates/nix-store-cf/src/: d1.rs  lib.rs  oidc.rs  r2.rs
crates/nix-store-http/: Cargo.toml
crates/nix-store-http/src/: auth.rs  lib.rs  upload.rs
crates/nix-store-iroh/: Cargo.toml
crates/nix-store-iroh/src/: gossip.rs  lib.rs  nar_transfer.rs  smart_quic.rs
crates/nix-store/src/: encoding.rs  error.rs  gc.rs  hash_index.rs  lib.rs  nar_cache.rs  nix_info.rs  nix_protocol.rs  retry.rs  smart.rs  store.rs
crates/nix-substituter/: Cargo.toml
crates/nix-substituter/src/: lib.rs
docs/: ARCHITECTURE.md  BUILD-SYSTEM.md  COMMANDS.md  CONTRIBUTING.md  PROTOCOLS.md  QUICKSTART.md  README.md  SMART-PROTOCOL.md
iroh-nix/: Cargo.toml
iroh-nix/src/: build.rs  build_hook.rs  builder.rs  cli.rs  control.rs  error.rs  gc.rs  gossip.rs  hash_index.rs  http_cache.rs  lib.rs  main.rs  nar.rs  nix_info.rs  nix_protocol.rs  node.rs  protocol.rs  retry.rs  substituter.rs  transfer.rs
tests/: nixos.nix
