[package]
name = "iroh-nix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Distributed Nix binary cache using iroh for P2P artifact distribution"

[dependencies]
# workspace crates
nix-store.workspace = true
nix-store-http.workspace = true
nix-substituter.workspace = true
nix-store-iroh.workspace = true

# iroh ecosystem
iroh.workspace = true
iroh-base = { workspace = true, features = ["key", "relay"] }
iroh-gossip.workspace = true

# async runtime
tokio.workspace = true
tokio-util.workspace = true
n0-future.workspace = true

# serialization
serde.workspace = true
serde_json.workspace = true

# hashing
blake3.workspace = true

# logging
tracing.workspace = true
tracing-subscriber.workspace = true

# http client (for push command)
reqwest.workspace = true
url.workspace = true

# misc
clap.workspace = true
rand.workspace = true
bytes.workspace = true

# cli
indicatif.workspace = true
console.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile = "3.15"

[[bin]]
name = "iroh-nix"
path = "src/main.rs"
