[package]
name = "nix-store-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP binary cache client for Nix stores"

[dependencies]
nix-store.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
async-compression.workspace = true
url.workspace = true
sha2.workspace = true
blake3.workspace = true
base64.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures-lite.workspace = true
tracing.workspace = true
async-trait.workspace = true
