[package]
name = "nix-store-iroh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Iroh transport layer for Nix store operations"

[dependencies]
nix-store.workspace = true
iroh.workspace = true
iroh-base.workspace = true
iroh-gossip.workspace = true
tokio.workspace = true
tokio-util.workspace = true
n0-future.workspace = true
serde.workspace = true
postcard.workspace = true
blake3.workspace = true
bytes.workspace = true
tracing.workspace = true
async-trait.workspace = true
hex.workspace = true
sha2.workspace = true
futures-lite.workspace = true

[dev-dependencies]
tempfile = "3.15"
rand.workspace = true
