[package]
name = "nix-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for Nix store operations"

[features]
default = ["sqlite", "runtime"]
sqlite = ["dep:rusqlite"]
runtime = ["dep:tokio", "dep:tokio-util", "dep:rand"]

[dependencies]
sha2.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
base64.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

# Optional: requires "sqlite" feature
rusqlite = { workspace = true, optional = true }

# Optional: requires "runtime" feature
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.15"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rand.workspace = true
